adding silence, adding pull to refresh

--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -5,7 +5,7 @@
         About Apps
       </div>
       <div class="item item-text-wrap">
-        Sensu API Monitoring Apps
+        Sensu Monitoring App v0.2
       </div>
     </div>
 
