--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -15,6 +15,12 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-client"></ion-nav-view>
   </ion-tab>
 
+
+  <!-- Silence Tab -->
+  <ion-tab title="Silenced" icon-off="ion-ios-bell-outline" icon-on="ion-ios-bell" href="#/tab/silence">
+    <ion-nav-view name="tab-silence"></ion-nav-view>
+  </ion-tab>
+
   <!-- Account Tab -->
   <ion-tab title="About" icon-off="ion-ios-help-outline" icon-on="ion-ios-help" href="#/tab/about">
     <ion-nav-view name="tab-about"></ion-nav-view>
