--- a/www/templates/tab-client-detail.html
+++ b/www/templates/tab-client-detail.html
@@ -6,8 +6,9 @@
 -->
 <ion-view view-title="Client Detail">
   <ion-content class="padding">
+    <ion-refresher pulling-text="Pull to refresh" on-refresh="refreshClientDetailData()"></ion-refresher>
 
-    <div class="card">
+    <div class="card" ng-if="client.address != null">
       <div class="item item-divider">
         Host Information
       </div>
@@ -16,7 +17,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" ng-if="checks.length > 0">
       <div class="item item-divider">
         Checks Information
       </div>
